Bug 687770 - Bug687290.ps pkmraw at 72 dpi segfaults
Summary: Bug687290.ps pkmraw at 72 dpi segfaults
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Interpreter (show other bugs)
Version: master
Hardware: All All
: P2 critical
Assignee: Raph Levien
URL:
Keywords:
: 687774 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-10-21 12:35 UTC by Jack Moffitt
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
Patch to resolve umr's (1.67 KB, patch)
2004-11-18 17:43 UTC, Raph Levien
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Moffitt 2004-10-21 12:35:54 UTC
The file Bug687290.ps from the nightly regression test is causing Ghostscript to
segfault for the normal raster test in both banded and unbanded modes for pkmraw
and r72.

Here is the commandline to reproduce:
gs -dQUIET -dNOPAUSE -dBATCH -K1000000 -r72 -dMaxBitmap=10000 -sDEVICE=pkmraw
-sOutputFile='Bug687290.ps.pkmraw.72.1' -dNOOUTERSAVE -dJOBSERVER -c false 0
startjob pop - <  '/home/regression/comparefiles/Bug687290.ps'
Comment 1 Ray Johnston 2004-10-22 11:06:00 UTC
This file runs sometimes and not others. I determined that I can get a repeatable 
failure with a DEBUG build, using the -Z@\$\? option. This appears to be 
UMR related to the 'sbits' array having different elements initialized in set_ht_colors 
that are used in set_color_ht  (great names, huh?) 
 
Elevating to 8.50 release critical since UMR's that cause segfaults are *NOT GOOD* 
Comment 2 Jack Moffitt 2004-10-25 08:42:42 UTC
*** Bug 687774 has been marked as a duplicate of this bug. ***
Comment 3 Igor Melichev 2004-10-25 08:45:39 UTC
Copying from Bug 687774 :
Running "pkmraw -r72 Bug687290.ps" on Windows got a crash in 
gx_render_ht_1_level due to  b_level = -131058, porder->levels[b_level] runs 
out the array range.


Comment 4 Raph Levien 2004-11-18 17:43:04 UTC
Created attachment 1046 [details]
Patch to resolve umr's

See code-review post for more discussion:

http://www.ghostscript.com/pipermail/gs-code-review/2004-November/004695.html
Comment 5 Raph Levien 2004-11-18 17:45:46 UTC
Fix committed:

http://www.ghostscript.com/pipermail/gs-cvs/2004-November/005030.html
Comment 6 Raph Levien 2004-11-18 17:54:28 UTC
See bug #687805 for followup on where the copying of color procs when making a
targeted null device should happen.